# python-cookiecutter

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
{{cookiecutter.project_slug}}/.github/workflows/: pipeline.yaml
{{cookiecutter.project_slug}}/docs/: requirements.txt
{{cookiecutter.project_slug}}/docs/source/: conf.py  index.md  modules.md
{{cookiecutter.project_slug}}/src/{{cookiecutter.module_name}}/: logic.py
{{cookiecutter.project_slug}}/tests/integration/: test_logic.py
{{cookiecutter.project_slug}}/tests/unit/: test_unit.py
