[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "A production-grade project created by {{ cookiecutter.full_name }}"
requires-python = ">={{ cookiecutter.python_version }}"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
# 2. Map the dynamic fields to your text files
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ["requirements-dev.txt"]}
docs = {file = ["docs/requirements.txt"]}

[tool.ruff]
src = ["src"]
# Exclude boring folders
exclude = [".venv", "dist"]
line-length = 88
target-version = "py{{ cookiecutter.python_version.replace('.', '') }}"

[tool.ruff.lint]
# Enable specific rules (e.g., Error, Bugbear, Isort)
select = ["E", "F", "B", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "{{ cookiecutter.python_version }}"
packages = ["{{ cookiecutter.module_name }}"]
mypy_path = "src"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov={{ cookiecutter.module_name }} --cov-report=term-missing --cov-fail-under=100"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "**/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.bumpversion]
current_version = "0.1.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"

[[tool.bumpversion.files]]
filename = "src/{{cookiecutter.module_name}}/__init__.py"